--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vuejs-skeleton</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>CORE</title>
+    <link rel="icon" type="image/png" sizes="32x32"  href="static/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/images/icons/favicon-16x16.png">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+    </body>
 </html>
